# Sub-Goal

./: CMakeLists.txt  README.md
cmake/: CompilerWarnings.cmake
src/: main.cpp
src/App/: App.cpp  App.hpp
